- Fixed broken View Site link for TLDs starting with 'a' - issue 116
- Fixed XHTML compatibility problem with Comment plugin.
- Fixed issue where only the last addJavascript was accepted.
- Fixed admin CSS so that foreground colours are declared - issue 137
- Fixed MOD_REWRITE test which produced double slashes - issue 150

. Improved replacement of letters like ö in the slug
. Improved default 404 message for useability. - issue 163
. Updated chinese translation - thanks westup
. Updated comment plugin to make use of statistics_api plugin if available and enabled.
. Restricted access to backend to roles administrator, developer and editor - issue 122
. Updated readme.txt with requirements detail for MySQL server.
. Updated file_manager plugin translations to conform to new template.
. Updated comments in preparation for PHPDoc documentation.
. Renamed root dir text files to avoid name conflicts and accomodate Windows users.
. Renamed style.css into screen.css for more consistency with print.css in Normal layout.
. Simplified Comment plugin to make use of Plugin::getAllSettings() and friends.
. Commented .htaccess file for new users.
. Removed slug field from Homepage metadata (and initial code fixed).
. Enhanced comments in config.php template

0.9.4 - released 2008-09-29

+ Added function to allow plugin devs to add one or more javascript file to the backend html for their plugin. (issue 35)
+ Added auto-detected link to a plugin's documentation page. Checks for existence of documentation() function in plugin's controller (issue 33)
+ Added auto-detected link to a plugin's settings page. Checks for existence of settings() function in plugin's controller (issue 32)
+ Added Indonesian translation
+ Added "View this page" link in the Edit page screen
+ Added "Tag to use this snippet" in the Snippets tab
+ Added en-messages.php.template to i18n directory of core to assist translators
+ Added admin section option to choose default tab after login (issue 29)